--- a/css/theme-1.css
+++ b/css/theme-1.css
@@ -1,9 +1,8 @@
 body{
 	font-family: 'Dosis', sans-serif;
-	color: #fff;
 }
 .bottom {
-	border-bottom: 2px solid #30C08D;
+	border-bottom: 1px solid #30C08D;
 }
 .sub {
 	border-bottom: 4px solid #30C08D;
@@ -12,8 +11,8 @@ body{
 .lang {
 	padding-top: 10px;
 	padding-bottom: 6px;
-	color: #000;
-	background: #F34B09;
+	color: #fff;
+	background: #30C08D;
 }
 .brand {
 	padding-top: 30px;
@@ -25,13 +24,13 @@ body{
 	padding-top: 40px;
 	padding-bottom: 40px;
 	color: #606060;
-	background: #C8B700;
+	background: #DBDADA;
 	}
 .footer {
 	padding-top: 15px;
 	padding-bottom: 10px;
-	color: #000;
-	background: #78FF9B99;
+	color: #fff;
+	background: #30C08D;
 }
 .btn-like{
 	background-color: #50a8f3;
@@ -89,6 +88,20 @@ body{
 ul li{
 	display: inline;
 }
+.form-group-lg .form-control {
+    border-radius: 18px;
+}
+.btn-group-lg > .btn, .btn-lg {
+    border-radius: 18px;
+}
+.btn .badge {
+    top: -18px;
+}
+.btn-primary .badge {
+    color: #fff;
+    background-color: #000;
+    border-color: #000;
+}
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -120,39 +133,6 @@ ul li{
   font-size: 23px;
   border-radius: 3px;
  }
-.btn-default-1:hover, .btn-default-1:focus {
-    border: 3px solid #30C08D;
-    outline: 0;
-    color: #fff;
-    background-color: #30C08D;
-}
-.btn-default-1 {
-    border: 3px solid #30C08D;
-    color: #30C08D;
-    background-color: transparent;
-}
-.btn-default-2:hover, .btn-default-2:focus {
-    border: 3px solid #1A8C63;
-    outline: 0;
-    color: #000;
-    background-color: #1A8C63;
-}
-.btn-default-2 {
-    border: 3px solid #1A8C63;
-    color: #1A8C63;
-    background-color: transparent;
-}
-.btn-default-3:hover, .btn-default-3:focus {
-    border: 3px solid #000;
-    outline: 0;
-    color: #fff;
-    background-color: #000;
-}
-.btn-default-3 {
-    border: 3px solid #fff;
-    color: #30C08D;
-    background-color: transparent;
-}
  .card-large {
  	border: 3px #30C08D  solid;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -169,14 +149,18 @@ ul li{
 .form-control{
 	border: 3px solid #30C08D;
 }
-a:focus, a:hover {
-    color: #e9ed4c;
+.btn-default{
+	border: 1px solid #30C08D;
+	background: #30C08D;
+	color: #fff;
+}
+.btn-default:hover{
+	border: 1px solid #F7B449;
+	background: #F7B449;
 }
 a {
-    color: #fcfeff;
+    color: #02284b;
 }
-.separar{
-	padding-top: 50px;
-	padding-bottom: 50px;
-}
+
+
 
